; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe_elink.c_elink_warpcore_clear_regs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_bxe_elink.c_elink_warpcore_clear_regs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.elink_reg_set = type { i32, i32, i64, i32, i32, i32 }
%struct.elink_phy = type { i32 }
%struct.elink_params = type { %struct.bxe_softc* }
%struct.bxe_softc = type { i32 }

@elink_warpcore_clear_regs.wc_regs = internal global [11 x %struct.elink_reg_set] [%struct.elink_reg_set { i32 140, i32 139, i64 0, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 135, i64 330, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 134, i64 2048, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 136, i64 32776, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 132, i64 405, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 131, i64 7, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 130, i64 2, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 129, i64 24576, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 128, i64 0, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 133, i64 8256, i32 0, i32 0, i32 0 }, %struct.elink_reg_set { i32 138, i32 137, i64 320, i32 0, i32 0, i32 0 }], align 16
@MDIO_WC_REG_RX66_CONTROL = common dso_local global i32 0, align 4
@MDIO_WC_REG_TX0_TX_DRIVER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.elink_phy*, %struct.elink_params*, i64)* @elink_warpcore_clear_regs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @elink_warpcore_clear_regs(%struct.elink_phy* %0, %struct.elink_params* %1, i64 %2) #0 {
  %4 = alloca %struct.elink_phy*, align 8
  %5 = alloca %struct.elink_params*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.bxe_softc*, align 8
  %8 = alloca i64, align 8
  store %struct.elink_phy* %0, %struct.elink_phy** %4, align 8
  store %struct.elink_params* %1, %struct.elink_params** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.elink_params*, %struct.elink_params** %5, align 8
  %10 = getelementptr inbounds %struct.elink_params, %struct.elink_params* %9, i32 0, i32 0
  %11 = load %struct.bxe_softc*, %struct.bxe_softc** %10, align 8
  store %struct.bxe_softc* %11, %struct.bxe_softc** %7, align 8
  %12 = load %struct.bxe_softc*, %struct.bxe_softc** %7, align 8
  %13 = load %struct.elink_phy*, %struct.elink_phy** %4, align 8
  %14 = load i32, i32* @MDIO_WC_REG_RX66_CONTROL, align 4
  %15 = call i32 @elink_cl45_read_or_write(%struct.bxe_softc* %12, %struct.elink_phy* %13, i32 138, i32 %14, i32 24576)
  store i64 0, i64* %8, align 8
  br label %16

16:                                               ; preds = %36, %3
  %17 = load i64, i64* %8, align 8
  %18 = call i64 @ARRAY_SIZE(%struct.elink_reg_set* getelementptr inbounds ([11 x %struct.elink_reg_set], [11 x %struct.elink_reg_set]* @elink_warpcore_clear_regs.wc_regs, i64 0, i64 0))
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %39

20:                                               ; preds = %16
  %21 = load %struct.bxe_softc*, %struct.bxe_softc** %7, align 8
  %22 = load %struct.elink_phy*, %struct.elink_phy** %4, align 8
  %23 = load i64, i64* %8, align 8
  %24 = getelementptr inbounds [11 x %struct.elink_reg_set], [11 x %struct.elink_reg_set]* @elink_warpcore_clear_regs.wc_regs, i64 0, i64 %23
  %25 = getelementptr inbounds %struct.elink_reg_set, %struct.elink_reg_set* %24, i32 0, i32 3
  %26 = load i32, i32* %25, align 16
  %27 = load i64, i64* %8, align 8
  %28 = getelementptr inbounds [11 x %struct.elink_reg_set], [11 x %struct.elink_reg_set]* @elink_warpcore_clear_regs.wc_regs, i64 0, i64 %27
  %29 = getelementptr inbounds %struct.elink_reg_set, %struct.elink_reg_set* %28, i32 0, i32 2
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %8, align 8
  %32 = getelementptr inbounds [11 x %struct.elink_reg_set], [11 x %struct.elink_reg_set]* @elink_warpcore_clear_regs.wc_regs, i64 0, i64 %31
  %33 = getelementptr inbounds %struct.elink_reg_set, %struct.elink_reg_set* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @elink_cl45_write(%struct.bxe_softc* %21, %struct.elink_phy* %22, i32 %26, i64 %30, i32 %34)
  br label %36

36:                                               ; preds = %20
  %37 = load i64, i64* %8, align 8
  %38 = add i64 %37, 1
  store i64 %38, i64* %8, align 8
  br label %16

39:                                               ; preds = %16
  %40 = load %struct.elink_phy*, %struct.elink_phy** %4, align 8
  %41 = load %struct.elink_params*, %struct.elink_params** %5, align 8
  %42 = call i64 @elink_get_warpcore_lane(%struct.elink_phy* %40, %struct.elink_params* %41)
  store i64 %42, i64* %6, align 8
  %43 = load %struct.bxe_softc*, %struct.bxe_softc** %7, align 8
  %44 = load %struct.elink_phy*, %struct.elink_phy** %4, align 8
  %45 = load i64, i64* @MDIO_WC_REG_TX0_TX_DRIVER, align 8
  %46 = load i64, i64* %6, align 8
  %47 = mul i64 16, %46
  %48 = add i64 %45, %47
  %49 = call i32 @elink_cl45_write(%struct.bxe_softc* %43, %struct.elink_phy* %44, i32 138, i64 %48, i32 2448)
  ret void
}

declare dso_local i32 @elink_cl45_read_or_write(%struct.bxe_softc*, %struct.elink_phy*, i32, i32, i32) #1

declare dso_local i64 @ARRAY_SIZE(%struct.elink_reg_set*) #1

declare dso_local i32 @elink_cl45_write(%struct.bxe_softc*, %struct.elink_phy*, i32, i64, i32) #1

declare dso_local i64 @elink_get_warpcore_lane(%struct.elink_phy*, %struct.elink_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
